menu created for access previledges

--- a/stuff/meu/in.html
+++ b/stuff/meu/in.html
@@ -22,7 +22,19 @@ $(document).ready(function(){
 			<li> 
 				<a href="#">Forum</a> 
 				<ul> 
-					<li><a href="#">Support</a></li> 
+					<li><a href="#">Support</a>
+<ul> 
+					<li><a href="#">Support</a>
+
+</li> 
+					
+					<li><a href="#">Help</a></li> 
+					<li><a href="#">Examples</a></li>
+					<li><a href="#">Your work</a></li>
+				</ul> 
+
+</li> 
+					
 					<li><a href="#">Help</a></li> 
 					<li><a href="#">Examples</a></li>
 					<li><a href="#">Your work</a></li>
